--- a/wiki/DadosEntrada.wiki
+++ b/wiki/DadosEntrada.wiki
@@ -59,7 +59,13 @@
 % ---
 \newcommand{
 \ResumoTexto}{
-Segundo a \citeonline[3.1-3.2]{abntex2modelo}, o resumo deve ressaltar o  objetivo, o método, os resultados e as conclusões do documento. A ordem e a extensão destes itens dependem do tipo de resumo (informativo ou indicativo) e do tratamento que cada item recebe no documento original. O resumo deve ser precedido da referência do documento, com exceção do resumo inserido no próprio documento. (\ldots) As palavras-chave devem figurar logo abaixo do  resumo, antecedidas da expressão Palavras-chave:, separadas entre si por ponto e finalizadas também por ponto.
+Segundo a \citeonline[3.1-3.2]{abntex2modelo}, o resumo deve ressaltar o
+  objetivo, o método, os resultados e as conclusões do documento. 
+A ordem e a extensão destes itens dependem do tipo de resumo (informativo
+ou indicativo) e do tratamento que cada item recebe no documento original. 
+O resumo deve ser precedido da referência do documento, com exceção do 
+resumo inserido no próprio documento. (\ldots) As palavras-chave devem 
+figurar logo abaixo do  resumo, antecedidas da expressão Palavras-chave:, separadas entre si por ponto e finalizadas também por ponto.
 }
 % ---
 \newcommand{
