% Alteração da indentação dos itens do sumário
A indentação da seção e demais subpartes foi ajustado para terem alinhamento pela esquerda.

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -230,7 +230,12 @@
 \setlength{\cftbeforesectionskip}{0pt} 
 \setlength{\cftbeforesubsubsectionskip}{0pt} 
 \setlength{\cftbeforechapterskip}{\onelineskip} 
- 
+
+% Alteração da indentação dos itens do sumário
+\cftsetindents{section}{0pt}{20pt}
+\cftsetindents{subsection}{0pt}{30pt}
+\cftsetindents{subsubsection}{0pt}{40pt}
+
 % Modifica a formatacao dos textos 
  
 % Secao Primaria (Chapter): Caixa alta, Negrito, tamanho 12 
