linha 15: atualização do e-mail para contato

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -12,12 +12,12 @@
 %% This work has the LPPL maintenance status `maintained'.
 %% 
 %% The Current Maintainer of this work is Emílio Eiji Kavamura,
-% eek.edu@outlook.com
+% eek.edu@outlook.com; emilio.kavamura@ufpr.br
 %
 %
 %% Further information about abnTeX2 are available on http://abntex2.googlecode.com/
 %%
-% https://code.google.com/p/abntex2/issues/???????????????????????????????????????????????????
+% https://code.google.com/p/abntex2/issues/ 
 
 \ProvidesPackage{UFPR}[2014/10/02 Criacao desta customizacao do abnTeX2 para UFPR]
 
