Ajuste do título FIGURA e TABELA
Nas linhas 276 a 278, foram adicionados os comandos para deixar os títulos dos elementos em maiúsculo nas respectivas listas (lot e lof).

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -272,3 +272,7 @@
      {}%rodapé ímpar/onside à esquerda}
      {}%centro \thepage}
      {}%direita}
+     
+% Adequando o uppercase titulo dos elementos nas suas respectivas listas
+\renewcommand{\tablename}{TABELA }
+\renewcommand{\figurename}{FIGURA }
