Ajuste do título FIGURA e TABELA, e REFERENCIAS
\renewcommand{\bibname}{\uppercase{REFER\^ENCIAS}}


\renewcommand{\cftfigurename}{FIGURA\enspace}   
\renewcommand{\cfttablename}{TABELA\enspace}

Para ajustar:
o título das referências
os titulos nas legendas das figuras e tabelas

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -133,9 +133,11 @@
 \renewcommand{\coorientadorname}{Coorientador:}
 \renewcommand{\fontename}{Fonte}
 \renewcommand{\notaname}{Nota}
-\renewcommand{\bibname}{REFER\^ENCIAS}
+\renewcommand{\bibname}{\uppercase{REFER\^ENCIAS}}
 \renewcommand{\indexname}{\'INDICE}
 
+\renewcommand{\cftfigurename}{FIGURA\enspace}   
+\renewcommand{\cfttablename}{TABELA\enspace}
 
 %-----------------------------------------------------------------------------   
 % Impressão da Capa
