descrição das alterações corrigida
% Adequando o uppercase titulo dos elementos nas suas respectivas LEGENDAS.
\renewcommand{\tablename}{TABELA }
\renewcommand{\figurename}{FIGURA }

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -275,6 +275,6 @@
      {}%centro \thepage}
      {}%direita}
      
-% Adequando o uppercase titulo dos elementos nas suas respectivas listas
+% Adequando o uppercase titulo dos elementos nas suas respectivas legendas
 \renewcommand{\tablename}{TABELA }
 \renewcommand{\figurename}{FIGURA }
