descrição das alterações corrigida
% Adequando o uppercase titulo dos elementos nas suas respectivas LISTAS
\renewcommand{\cftfigurename}{FIGURA\enspace}   
\renewcommand{\cfttablename}{TABELA\enspace}

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -136,6 +136,7 @@
 \renewcommand{\bibname}{\uppercase{REFER\^ENCIAS}}
 \renewcommand{\indexname}{\'INDICE}
 
+% Adequando o uppercase titulo dos elementos nas suas respectivas LISTAS
 \renewcommand{\cftfigurename}{FIGURA\enspace}   
 \renewcommand{\cfttablename}{TABELA\enspace}
 
