--- a/00-dados.tex
+++ b/00-dados.tex
@@ -33,8 +33,10 @@
 \autor{Rodrigo H M}
 \local{Curitiba}
 \data{2014} %Apenas ano 4 dígitos
-\orientador{Emílio Eiji Kavamura}
-\coorientador{}
+%\orientador{Emílio Eiji Kavamura}
+%\coorientador{}
+\orientadora{Grace Kelly}
+\coorientadora{Audrey Hepburn}
 \instituicao{%
   Universidade Federal do Paraná
   }
