--- a/00-dados.tex
+++ b/00-dados.tex
@@ -32,11 +32,20 @@
 \titulo{Modelo de\\ trabalho acadêmico com \abnTeX}
 \autor{Rodrigo H M}
 \local{Curitiba}
-\data{2014} %Apenas ano 4 dígitos
-%\orientador{Emílio Eiji Kavamura}
-%\coorientador{}
-\orientadora{Grace Kelly}
-\coorientadora{Audrey Hepburn}
+\data{2015} %Apenas ano 4 dígitos
+
+% Orientador ou Orientadora
+\orientador{Prof Emílio Eiji Kavamura, MSc}
+\orientadora{}%Prof\textordfeminine Grace Kelly, DSc}
+
+% Coorientador ou Coorientadora
+\coorientador{}%Prof Morgan Freeman, DSc}
+\coorientadora{Prof\textordfeminine Audrey Hepburn, DEng}
+
+% Segundo Coorientador ou Segunda Coorientadora
+\scoorientador{Prof Jack Nicholson, DEng}
+\scoorientadora{}%Prof\textordfeminine Ingrid Bergman, DEng}
+
 \instituicao{%
   Universidade Federal do Paraná
   }
