Table caption before the tabular element
Updated the position of table caption before tabular element.

--- a/main.tex
+++ b/main.tex
@@ -101,12 +101,12 @@
 % em maiusculas nas respectivas listas
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{table}[!ht]
+ \centering
+ \par\caption{TesTANDO TABELAS}
  \begin{tabular}{c|c|c}
  teste1&teste1&teste1\\\hline\hline
   1&2&3\\\hline
  \end{tabular}
-
- \par\caption{TesTANDO TABELAS}
  \label{tab:tab01}
 \end{table}
 
