commented \color {blue}

--- a/00-pretextual.tex
+++ b/00-pretextual.tex
@@ -30,7 +30,7 @@
 % \begin{fichacatalografica}
 %     \includepdf{fig_ficha_catalografica.pdf}
 % \end{fichacatalografica}
-\begin{fichacatalografica}\color{blue}
+\begin{fichacatalografica}%\color{blue}
 	\vspace*{\fill}					% Posição vertical
 	\hrule							% Linha horizontal
 	\begin{center}					% Minipage Centralizado
@@ -68,7 +68,7 @@
 % ---
 % Inserir errata
 % ---
-\begin{errata}\color{blue}
+\begin{errata}%\color{blue}
 Elemento opcional da \citeonline[4.2.1.2]{NBR14724:2011}. Exemplo:
 
 \vspace{\onelineskip}
@@ -105,7 +105,7 @@ Zootecnia, Universidade de São Paulo, São Paulo, 2011.
 %
 % \includepdf{folhadeaprovacao_final.pdf}
 %
-\begin{folhadeaprovacao}\color{blue}
+\begin{folhadeaprovacao}%\color{blue}
 
   \begin{center}
     {\ABNTEXchapterfont
