Errata, assinaturas e data do termo de aprovação
O texto de errata foi transferido para o arquivo 00-dados.tex.
A assinatura dos membros da banca no termo de aprovação, bem como a data foram transferidos para o arquivo 00-dados.tex.

--- a/00-dados.tex
+++ b/00-dados.tex
@@ -76,7 +76,8 @@
 	\imprimirdata.}\\
 	
 	\hspace{0.5cm}
-		1. Palavra-chave1.
+	   \begin{minipage}{.70\textwidth}
+	    	1. Palavra-chave1.
 		
 		2. Palavra-chave2.
 		
@@ -89,8 +90,31 @@
 		IV. Título\\ 			
 	
 	\hspace{8.75cm} CDU 02:141:005.7\\
-}
+	\end{minipage}
+	}
 
+% ---
+\newcommand{
+\AssinaAprovacao}{
+
+\assinatura{%\textbf
+   {Professor} \\ Convidado 1}
+   \assinatura{%\textbf
+   {Professor} \\ Convidado 2}
+   \assinatura{%\textbf
+   {Professor} \\ Convidado 3}
+   %\assinatura{%\textbf{Professor} \\ Convidado 4}
+      
+   \begin{center}
+    \vspace*{0.5cm}
+    %{\large\imprimirlocal}
+    %\par
+    %{\large\imprimirdata}
+    \imprimirlocal, 24 de novembro de 2012.
+    \vspace*{1cm}
+  \end{center}
+  }
+  
 % ---
 \newcommand{
 \Errata}{%\color{blue}
