--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -25,7 +25,10 @@
 % Pacotes de citações
 % ---
 \usepackage[brazilian,hyperpageref]{backref}	 % Paginas com as citações na bibl
-\usepackage[alf]{abntex2cite}	% Citações padrão ABNT
+\usepackage[alf,
+	    %abnt-emphasize=em,  %\emph opção padrão.
+            abnt-emphasize=bf  %\textbf
+            ]{abntex2cite}	% Citações padrão ABNT
 
 % --- 
 % CONFIGURAÇÕES DE PACOTES
