--- a/UFPR.sty
+++ b/UFPR.sty
@@ -354,3 +354,10 @@
 % Adequando o uppercase titulo dos elementos nas suas respectivas legendas
 \renewcommand{\tablename}{TABELA }
 \renewcommand{\figurename}{FIGURA }
+\renewcommand{\quadroname}{QUADRO }
+
+% Adequando o hifen entre o nome e o título dos elementos nas suas respectivas listas
+\renewcommand{\cftfigaftersnum}{ -- }
+\renewcommand{\cfttabaftersnum}{ -- }
+\renewcommand{\cftquadroaftersnum}{ -- }
+
