criação do indice de quadros
Nomeia o elemento: quadro
Cria a lista com numeração continua ao longo do documento, poderia ser reiniciado a cada seccao, capitulo...

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -83,3 +83,20 @@
 % ---
 \makeindex
 % ---
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Criação do indice de quadros
+ \usepackage{newfloat}
+
+\PrepareListOf{quadro}{%
+\renewcommand{\cftfigpresnum}{Quadro~}}
+
+\DeclareFloatingEnvironment[
+fileext=loq,
+listname={Lista de Quadros},
+name=Quadro,
+%placement=p,
+within= none, % numeracao continua
+%within=section, % numeracao reinicia em cada seccao
+%chapterlistsgaps=off
+]{quadro}
