configuração de legenda de figura e tabela
comentado  linhas 360-362 por hora.

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -357,7 +357,7 @@
 %\renewcommand{\quadroname}{QUADRO }
 
 % Adequando o hifen entre o nome e o título dos elementos nas suas respectivas listas
-\renewcommand{\cftfigaftersnum}{ -- }
-\renewcommand{\cfttabaftersnum}{ -- }
+%\renewcommand{\cftfigaftersnum}{ -- }
+%\renewcommand{\cfttabaftersnum}{ -- }
 %\renewcommand{\cftquadroaftersnum}{ -- }
 
