Coorientadora no preambulo corrigida
Linhas 268 a 270: Coorientadora aparecia pois faltava o comando  \abntex@ifnotempty{\imprimircoorientadora}
Observação e sugestão dada por Alan Daniel Weiss 2016/09/29

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -265,8 +265,9 @@
 			{\imprimirorientadoraRotulo~\imprimirorientadora}
 			\abntex@ifnotempty{\imprimircoorientador}
 			{\par\imprimircoorientadorRotulo~\imprimircoorientador}%
-			{\par\imprimircoorientadoraRotulo~\imprimircoorientadora}%
-
+			{\abntex@ifnotempty{\imprimircoorientadora}
+				{\par\imprimircoorientadoraRotulo~\imprimircoorientadora}%
+                        }
 			\ifthenelse{\equal{\imprimirscoorientadora}{} \AND \equal{\imprimirscoorientador}{}}{}
 			{
 			\ifthenelse{\equal{\imprimirscoorientador}{}}{}
