Lista de siglas e símbolos
Linhas 201 a 229 Inserção de simbolos e siglas.

--- a/00-dados.tex
+++ b/00-dados.tex
@@ -198,3 +198,32 @@ projeto abn\TeX\ foram extraídos de \url{http://codigolivre.org.br/projects/abn
    quando pequenas, sonharam em se tornar cientistas.}
 	}
 % ---	
+
+\newcommand{\lsiglas}{
+\begin{siglas}
+%   \item [AEC] Arquitetura, Engenharia e Construção.
+%   \item [API] Application Programming Interface ou Interface de Programação de Aplicativo.
+%   \item [BIM] Building Information Modeling ou Modelagem da Informação da Construção.
+%   \item [CAD] Computer Aided Design ou Desenho Assistido por Computador.
+%   \item [ID] Identification.
+%   \item [IDE] Integrated Development Environment ou Ambiente de Programação Integrado.
+%   \item [IFC] Industry Foundation Classes.
+%   \item [ISO] International Organization for Standartization ou Organização Internacional de      Normalização.
+%   \item [SPOC] Semana Paranaense de Obra Civis.
+%   \item [TI] Tecnologia da Informação.
+%   \item [UFPR] Universidade Federal do Paraná.
+%   \item [VBA] Visual Basic Application.
+%   \item [VPL] Visual Programming Language ou Linguagem de Programação Visual.
+%   \item [2D] 2 Dimensões (2D, 3D, 4D, 5D, ...).
+\item[FFT] Transformadas R\'apidas de Fourier. 
+\end{siglas}  
+}
+
+\def\lsimbolos{
+% \begin{simbolos}
+%   \item[$\Gamma$] Letra grega Gama
+%   \item[$\Lambda$] Lambda
+%   \item[$ \zeta $] Letra grega minúscula zeta
+%   \item[$ \in $] Pertence
+% \end{simbolos}
+}
